--- a/device_mcu/stat_monitor/.cproject
+++ b/device_mcu/stat_monitor/.cproject
@@ -30,12 +30,14 @@
                 <option id="toolchain.id" value="Renesas_CCRL"/>
                 				
                 <option id="toolchain.version" value="v1.09.00"/>
+                				
+                <option id="toolchain.enable" value="true"/>
                 			
             </storageModule>
             			
             <storageModule moduleId="cdtBuildSystem" version="4.0.0">
                 				
-                <configuration artifactExtension="abs" artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" description="Release - No Debug" id="com.renesas.cdt.managedbuild.renesas.ccrl.release.configuration.15881007" name="Release" parent="com.renesas.cdt.managedbuild.renesas.ccrl.release.configuration">
+                <configuration artifactExtension="mot" artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" description="Release - No Debug" id="com.renesas.cdt.managedbuild.renesas.ccrl.release.configuration.15881007" name="Release" parent="com.renesas.cdt.managedbuild.renesas.ccrl.release.configuration">
                     					
                     <folderInfo id="com.renesas.cdt.managedbuild.renesas.ccrl.release.configuration.15881007." name="/" resourcePath="">
                         						
@@ -43,7 +45,7 @@
                             							
                             <targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.ELF;org.eclipse.cdt.core.PE" id="com.renesas.cdt.managedbuild.renesas.ccrl.base.targetPlatform.1571883658" isAbstract="false" name="targetPlatform" osList="win32" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.base.targetPlatform"/>
                             							
-                            <builder buildPath="${workspace_loc:/stat_monitor}/Release" id="com.renesas.cdt.managedbuild.renesas.ccrl.base.builder.1620854839" managedBuildOn="true" name="builder.Release" parallelBuildOn="true" parallelizationNumber="optimal" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.base.builder"/>
+                            <builder buildPath="${workspace_loc:/stat_monitor}/Release" id="com.renesas.cdt.managedbuild.renesas.ccrl.base.builder.1620854839" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="builder" parallelBuildOn="true" parallelizationNumber="optimal" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.base.builder"/>
                             							
                             <tool id="com.renesas.cdt.managedbuild.renesas.ccrl.base.smsasm.2068646514" name="SMS Assembler" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.base.smsasm"/>
                             							
@@ -71,7 +73,7 @@
                                 								
                                 <option id="com.renesas.cdt.managedbuild.renesas.ccrl.compiler.option.g.700474319" name="Add debug information (-g)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.compiler.option.g" useByScannerDiscovery="false" value="false" valueType="boolean"/>
                                 								
-                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.renesas.ccrl.compiler.option.I.1964035479" name="Include file directories (-I)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.compiler.option.I" valueType="includePath">
+                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.renesas.ccrl.compiler.option.I.1964035479" name="Include file directories (-I)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.compiler.option.I" useByScannerDiscovery="false" valueType="includePath">
                                     									
                                     <listOptionValue builtIn="false" value="${TCINSTALL}/inc"/>
                                     									
@@ -125,9 +127,9 @@
                                 								
                                 <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.entryValue.947481271" name="Execution start address (-entry=&lt;symbol&gt;)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.entryValue" useByScannerDiscovery="false" value="" valueType="string"/>
                                 								
-                                <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.debugMonitorValue.332709646" name="Memory area (-debug_monitor=&lt;start address&gt;-&lt;end address&gt;)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.debugMonitorValue" useByScannerDiscovery="false" value="07E00-07FFF" valueType="string"/>
+                                <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.debugMonitorValue.332709646" name="Memory area (-debug_monitor=&lt;start address&gt;-&lt;end address&gt;)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.debugMonitorValue" useByScannerDiscovery="false" value="" valueType="string"/>
                                 								
-                                <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.userOptByteValue.1072335832" name="User option byte value (-user_opt_byte=&lt;value&gt;)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.userOptByteValue" useByScannerDiscovery="false" value="FFFFEF" valueType="string"/>
+                                <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.userOptByteValue.1072335832" name="User option byte value (-user_opt_byte=&lt;value&gt;)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.userOptByteValue" useByScannerDiscovery="false" value="EFFFE0" valueType="string"/>
                                 								
                                 <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.ocdbgValue.131041824" name="On-chip debug control value (-ocdbg=&lt;value&gt;)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.ocdbgValue" useByScannerDiscovery="false" value="04" valueType="string"/>
                                 								
@@ -151,7 +153,7 @@
                                     								
                                 </option>
                                 								
-                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.noneLinkageOrderList.1502743470" name="None(Linkage order list)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.noneLinkageOrderList" valueType="stringList">
+                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.noneLinkageOrderList.1502743470" name="None(Linkage order list)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.noneLinkageOrderList" useByScannerDiscovery="false" valueType="stringList">
                                     									
                                     <listOptionValue builtIn="false" value="&quot;.\generate\cstart.obj&quot;"/>
                                     									
@@ -168,6 +170,12 @@
                                     <listOptionValue builtIn="false" value="&quot;E:\Program Files (x86)\Renesas\RL78\1_9_0\lib\malloc_n.lib&quot;"/>
                                     								
                                 </option>
+                                								
+                                <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.securityID.1798666042" name="Security ID value (-security_id)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.securityID" useByScannerDiscovery="false" value="00000000000000000000" valueType="string"/>
+                                								
+                                <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.ocdbg.1462873792" name="Set enable/disable on-chip debug by link option (-ocdbg)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.ocdbg" useByScannerDiscovery="false" value="true" valueType="boolean"/>
+                                								
+                                <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.userOptByte.886967617" name="Set user option byte (-user_opt_byte)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.userOptByte" useByScannerDiscovery="false" value="true" valueType="boolean"/>
                                 								
                                 <inputType id="Base.Linker.ccrl.inputType.1347929277" name="Linker InputType" superClass="Base.Linker.ccrl.inputType"/>
                                 							
@@ -188,6 +196,8 @@
                                     <listOptionValue builtIn="false" value=""/>
                                     								
                                 </option>
+                                								
+                                <option id="com.renesas.cdt.managedbuild.renesas.ccrl.converter.option.outputHexFile.1945034901" name="Output hex file" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.converter.option.outputHexFile" useByScannerDiscovery="false" value="true" valueType="boolean"/>
                                 							
                             </tool>
                             						
@@ -208,6 +218,8 @@
             </storageModule>
             			
             <storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
+            			
+            <storageModule moduleId="com.renesas.cdt.managedbuild.core.boardInfo"/>
             		
         </cconfiguration>
         	
@@ -226,5 +238,13 @@
     </storageModule>
     	
     <storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
+    	
+    <storageModule moduleId="refreshScope"/>
+    	
+    <storageModule moduleId="org.eclipse.cdt.make.core.buildtargets">
+        		
+        <buildTargets/>
+        	
+    </storageModule>
     
 </cproject>
