--- a/device_mcu/stat_monitor/.cproject
+++ b/device_mcu/stat_monitor/.cproject
@@ -127,11 +127,11 @@
                                 								
                                 <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.entryValue.947481271" name="Execution start address (-entry=&lt;symbol&gt;)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.entryValue" useByScannerDiscovery="false" value="" valueType="string"/>
                                 								
-                                <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.debugMonitorValue.332709646" name="Memory area (-debug_monitor=&lt;start address&gt;-&lt;end address&gt;)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.debugMonitorValue" useByScannerDiscovery="false" value="" valueType="string"/>
+                                <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.debugMonitorValue.332709646" name="Memory area (-debug_monitor=&lt;start address&gt;-&lt;end address&gt;)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.debugMonitorValue" useByScannerDiscovery="false" value="7E00-7FFF" valueType="string"/>
                                 								
                                 <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.userOptByteValue.1072335832" name="User option byte value (-user_opt_byte=&lt;value&gt;)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.userOptByteValue" useByScannerDiscovery="false" value="EFFFE0" valueType="string"/>
                                 								
-                                <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.ocdbgValue.131041824" name="On-chip debug control value (-ocdbg=&lt;value&gt;)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.ocdbgValue" useByScannerDiscovery="false" value="04" valueType="string"/>
+                                <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.ocdbgValue.131041824" name="On-chip debug control value (-ocdbg=&lt;value&gt;)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.ocdbgValue" useByScannerDiscovery="false" value="84" valueType="string"/>
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.vectn.1321425378" name="Address setting for specified area of vector table (-vectn)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.vectn" useByScannerDiscovery="false" valueType="stringList">
                                     									
@@ -176,6 +176,8 @@
                                 <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.ocdbg.1462873792" name="Set enable/disable on-chip debug by link option (-ocdbg)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.ocdbg" useByScannerDiscovery="false" value="true" valueType="boolean"/>
                                 								
                                 <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.userOptByte.886967617" name="Set user option byte (-user_opt_byte)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.userOptByte" useByScannerDiscovery="false" value="true" valueType="boolean"/>
+                                								
+                                <option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.debugMonitor.43767869" name="Secure memory area of OCD monitor (-debug_monitor)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.debugMonitor" value="true" valueType="boolean"/>
                                 								
                                 <inputType id="Base.Linker.ccrl.inputType.1347929277" name="Linker InputType" superClass="Base.Linker.ccrl.inputType"/>
                                 							
